--- a/app/src/main/res/layout/home_row.xml
+++ b/app/src/main/res/layout/home_row.xml
@@ -14,11 +14,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="15dp"
         android:adjustViewBounds="true"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ambalance" />
@@ -27,7 +30,7 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:gravity="right"
+        android:gravity="center"
         android:text="TextView"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
